# financial-modelling

./: .flake8  .gitignore  CLAUDE.md  README.md  codex.toml  finanical_overview.md  poetry.toml  pyproject.toml
.claude/: settings.local.json
ai_context/: agents.md  ui_context.md
how-to-trade/: how_to_trade.ipynb
ml_classifier/: MachineLearningIndicator_Classifier_ml_trading_xgboost_St.ipynb  __init__.py  data.py  features.py  labels.py  ml_classifier.py  train.py
pandas_ta/: __init__.py
src/data-layer/: data.py
src/ui/: app.py  normalizing_data.py
src/ui/components/: __init__.py  charts.py  layouts.py  theme.py
src/ui/pages/: __init__.py  asset_features.py  asset_normalization.py  asset_risks.py  hidden_factors.py  portfolio_optimization.py
week1/: Session_1_Notebook_1.ipynb  Session_1_Notebook_2.ipynb  ai.md  x.py
week2/: Session_2_Notebook_1.ipynb  todd.ipynb
workbooks/ml_classifier/: features.py  labels.py  ml_classifier.py  test_data.py  train.py
workbooks/week1/: Session_1_Notebook_2.ipynb  winsorisation.md
workbooks/week2/: Session_2_Notebook_1.ipynb  Session_2_Notebook_2.ipynb  todd.ipynb
workbooks/week3/: Session 3 - Notebook 1.ipynb
