[project]
name = "fin-modelling"
version = "0.1.0"
description = ""
authors = [
    {name = "Todd B. Adams",email = "toddbadams@msn.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pandas = "^2.3.3"
numpy = "^2.4.1"
parquet = "^1.3.1"
requests = "^2.32.5"
streamlit = "^1.52.2"
streamlit-calendar = "1.4.0"
altair = "^6.0.0"
PyYAML = "^6.0.2"
matplotlib = "^3.8.0"
scikit-learn = "^1.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
