[project]
name = "fin-modelling"
version = "0.1.0"
description = ""
authors = [
    {name = "Todd B. Adams",email = "toddbadams@msn.com"}
]
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pandas = "^2.3.3"
numpy = "^2.3.5"
parquet = "^1.3.1"
requests = "^2.32.5"
streamlit = "^1.52.2"
altair = "^6.0.0"
PyYAML = "^6.0.2"
matplotlib = "^3.8.0"
scikit-learn = "^1.5.0"
yfinance = "^0.2.38"
pandas-ta-classic = "^0.3.59"
pandas-ta-openbb = "^0.4.22"
xgboost = "^3.1.3"
shap = ">=0.41.0,<0.42.0"
tqdm = "^4.67.0"
notebook = "^7.0.0"
ipykernel = "^7.1.0"
numba = "^0.62.1"
llvmlite = "^0.45.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
fastapi = "^0.115.0"
freezegun = "^1.3.1"
pandera = "^0.25.0"
pytest-httpserver = "^1.1.0"
uvicorn = "^0.23.0"
flake8 = "^7.3.0"
black = "^25.12.0"
isort = "^7.0.0"
mypy = "^1.19.1"
uv = ">=0.9.24"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
